# Quartz

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  client.py  flake.nix  server.py  setup.cfg  shell.nix
ClientLib/: __init__.py  clientClass.py  clientInterface.py  clientManagers.py  clientWire.py
Common/: __init__.py  colors.py  messageLib.py  serverData.py  threads.py
ICMChat/ClientLib/: clientInterface.py
ICMChat/Common/: colors.py  messageLib.py  serverData.py
ICMChat/ServerLib/: serverManagers.py
ServerLib/: __init__.py  serverActions.py  serverClass.py  serverCommands.py  serverManagers.py  serverWire.py
plugin-example/: README.md  cowsay.py
src/ICMChat/ClientLib/: clientClass.py  clientWire.py
src/ICMChat/Common/: __init__.py  threads.py
src/ICMChat/ServerLib/: __init__.py
src/Quartz/: __init__.py  client.py  server.py
src/Quartz/ClientLib/: __init__.py  clientClass.py  clientInterface.py  clientManagers.py  clientWire.py
src/Quartz/ClientLib/ClientPlugins/: __init__.py  cowsay.py
src/Quartz/Common/: __init__.py  colors.py  messageLib.py  serverData.py  threads.py
src/Quartz/ServerLib/: __init__.py  serverClass.py  serverManagers.py  serverWire.py
src/Quartz/ServerLib/ServerPlugins/: __init__.py
