[metadata]
name = ICMChat
version = attr: ICMChat.__version__
author = clr-cera
url = https://github.com/clr-cera/ICMChat
description = This is a chat!
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chat
license = MIT License

[options]
packages = find:
zip_safe = False
install_requires =
    dnspython
    build
    setuptools


[options.entry_points]
console_scripts = 
    Chat = ICMChat.client:main