[metadata]
name = Quartz
version = attr: Quartz.__version__
author = clr-cera
url = https://github.com/clr-cera/Quartz
description = This is a chat!
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chat
license = MIT License

[options]
package_dir=
    =src
packages = find:

zip_safe = False
install_requires =
    dnspython
    build
    setuptools

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    Quartz = Quartz.client:main